tests/baselines/reference/intersectionsOfLargeUnions2.errors.txt
tests/cases/compiler/intersectionsOfLargeUnions2.ts(4,15): error TS2300: Duplicate identifier 'ElementTagNameMap'.
tests/cases/compiler/intersectionsOfLargeUnions2.ts(31,15): error TS2536: Type 'T' cannot be used to index type 'HTMLElementTagNameMap'.
tests/cases/compiler/intersectionsOfLargeUnions2.ts(31,15): error TS2536: Type 'P' cannot be used to index type 'HTMLElementTagNameMap[T]'.


==== tests/cases/compiler/intersectionsOfLargeUnions2.ts (3 errors) ====
    // Repro from #24233
    
    declare global {
        interface ElementTagNameMap {
                  ~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'ElementTagNameMap'.
!!! related TS6203 /.ts/lib.dom.d.ts:19412:6: 'ElementTagNameMap' was also declared here.
            [index: number]: HTMLElement
        }
    
        interface HTMLElement {
            [index: number]: HTMLElement;
        }
    }
    
    export function assertIsElement(node: Node | null): node is Element {
        let nodeType = node === null ? null : node.nodeType;
        return nodeType === 1;
    }
      
    export function assertNodeTagName<
        T extends keyof ElementTagNameMap,
        U extends ElementTagNameMap[T]>(node: Node | null, tagName: T): node is U {
        if (assertIsElement(node)) {
            const nodeTagName = node.tagName.toLowerCase();
             return nodeTagName === tagName;
        }
        return false;
    }
      
    export function assertNodeProperty<
        T extends keyof ElementTagNameMap,
        P extends keyof ElementTagNameMap[T],
        V extends HTMLElementTagNameMap[T][P]>(node: Node | null, tagName: T, prop: P, value: V) {
                  ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2536: Type 'T' cannot be used to index type 'HTMLElementTagNameMap'.
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2536: Type 'P' cannot be used to index type 'HTMLElementTagNameMap[T]'.
        if (assertNodeTagName(node, tagName)) {
            node[prop];
        }
    }
    